# VedAstro.Python

./: .gitignore  FAQ.md  LICENSE  QUICKSTART.md  README.md  demo-all-astro-data.py  demo-calculate-events.py  demo-code-from-api-builder.py  demo-custom-ayanamsa.py  demo-general-calculators.py  demo-readme.py  demo_all_astro_data.py  demo_all_astro_data_csv.py  demo_all_astro_data_json_output.py  demo_all_horoscope_for_llm.py  demo_all_planet_data.py  demo_batch_processing.py  demo_bhava_chart_data.py  demo_birth_chart_basics.py  demo_calculate_events.py  demo_code_from_api_builder.py  demo_current_planets.py  demo_custom_ayanamsa.py  demo_daily_panchanga.py  demo_divisional_charts.py  demo_error_handling.py  demo_horoscope_prediction_names.py  demo_marriage_compatibility.py  demo_match_checker.py  demo_numerology_calculator.py  demo_quick_start.py  demo_transit_analysis.py  demo_vimshottari_dasa.py  meta.yaml  planet_data_results.csv  pyproject.toml  requirements.txt  setup.py  time_1.py
.github/workflows/: auto-bump-version.yml  debug.yml  publish-to-pypi.yml  publish_conda.yml
conda/: meta.yaml
scripts/: generateHoroscope.py
vedastro/: Library.pyi  VedAstro.Library.pyi  __init__.py  __init__.pyi  calc.py  calculate.py  geolocation.py  meta.yaml  planets.py  runtimeconfig.json  time.py  update_check.py  vedastro.py
vedastro/calculators/: __init__.py  astronomicalcalculator.py  ayanamsasettings.py  calcalculate.py  event_chart_tools.py  eventcalculator.py  eventmanager.py  horoscope_calculator_methods.py  matchcalculator.py
vedastro/dlls/: VedAstro.Library.deps.json
(+44 files in other folders)
