[tool.poetry]
name = "VedAstro"
version = "0.4.0"
description = "An open source Python libray for advanced astronomical calculations like planet longitude, house sign, shadbala, etc..."
authors = ["Tharaka Umayanga <tharakau@gmail.com>"]
readme = "README.md"
packages = [{include = "vedastro"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
pythonnet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"