[tool.poetry]
name = "VedAstro"
version = "1.22.13"
description = "An open source Python library for advanced astronomical calculations like planet longitude, house sign, shadbala, etc..."
authors = ["Tharaka Umayanga <tharakau@gmail.com>"]
readme = "README.md"
packages = [{include = "vedastro"}]
[tool.poetry.dependencies]
python = ">=3.9,<4.0"
colorama = "*"
packaging = "*"
requests = "*"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
